Use a process builder and use a thread for reading instead of writing.